kubernetes/main/apps/tekton-pipelines/tekton/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tekton-dashboard
  annotations:
    hajimari.io/appName: Tekton
    hajimari.io/icon: robot-industrial
spec:
  ingressClassName: internal
  rules:
    - host: &host tekton.${CLUSTER_DOMAIN}
      http:
        paths:
          - backend:
              service:
                name: tekton-dashboard
                port:
                  number: 9097
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - *host
